--- a/assets/css/less/components/buttons.less
+++ b/assets/css/less/components/buttons.less
@@ -1,54 +1,26 @@
 //out: false 
 
-.btn__gray {
+.btn__blue {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     text-transform: uppercase;
-    color: #FFF;
-    font-size: 18px;
+    color: #F0F8FF;
+    font-size: 22px;
     font-weight: 700;
     line-height: normal;
-    border-radius: 50px;
-    background-color: #383A36;
+    border-radius: 20px;
+    background-color: #0184FE;
     transition: all linear .15s;
-    padding: 25px 50px;
+    padding: 18px 60px;
+    width: fit-content;
+    line-height: 102.1%;
 
     &:hover {
-        color: #383A36;
-        background-color: #FFF;
-        box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.5);
-    }
-
-    @media screen and (min-width: 1200px) {
-        font-size: 22px;
+        color: #0184FE;
+        background-color: #F0F8FF;
     }
 }
 
-.btn__green {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    text-transform: uppercase;
-    color: #FFF;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: normal;
-    border-radius: 30px;
-    background-color: #5DA042;
-    transition: all linear .15s;
-    padding: 18px 34px;
-    gap: 10px;
-
-    .icon__whats {
-        width: fit-content;
-    }
-
-    &:hover {
-        color: #FFF;
-        background-color: #383A36;
-    }
-}
 
