--- a/assets/css/less/page/about.less
+++ b/assets/css/less/page/about.less
@@ -3,79 +3,131 @@
 .page__about {
     padding-top: 60px;
     padding-bottom: 60px;
+    background-color: #F0F8FF;
+    overflow-y: hidden;
 
     .wrapper {
-        max-width: 1224px;
+        max-width: 1190px;
         padding-left: 24px;
         padding-right: 24px;
         margin-left: auto;
         margin-right: auto;
 
-        .about__content {
+        .title {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
+            font-size: 36px;
+            font-weight: 700;
+            color: #020307;
+            margin-bottom: 35px;
+            text-transform: uppercase;
+        }
 
-            .title {
-                font-size: 18px;
-                font-weight: 400;
-                margin-bottom: 8px;
-                letter-spacing: 3px;
-                text-transform: uppercase;
+        .about__content {
+            position: relative;
+
+            .cover {
+                width: 100%;
+                max-width: 533px;                
+                border-top-left-radius: 30px;
+                border-bottom-right-radius: 30px;
             }
 
-            .subtitle {
-                font-size: 38px;
-                font-weight: 700;
-                margin-bottom: 20px;
+            .cover__detail {
+                display: none;
+            }
 
-                span {
-                   color: #5DA042; 
+            .content {
+                .about__text {
+                    font-size: 16px;
+                    font-weight: 400;
+                    color: #020307;
+                    line-height: 150%;
+                    margin-bottom: 20px;
+                    text-align: center;
+
+                    span {
+                       color: #0075E1;
+                       font-weight: 600; 
+                    }
                 }
-            }
 
-            .text {
-                font-size: 16px;
-                line-height: 130%;
-                font-weight: 400;
-                margin-bottom: 30px;
+                .about__numbers {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 45px;
+                    margin-bottom: 60px;
+                    margin-top: 45px;
 
-                span {
-                    font-weight: 600;
+                    .number__info {
+                        text-align: center;
+
+                        .number {
+                            font-size: 96px;
+                            font-weight: 700;
+                            color: #0184FE;
+                            line-height: 110%;
+                        }
+
+                        .info {
+                           font-size: 18;
+                           text-transform: uppercase;
+                           letter-spacing: 29%;
+                           color: #020307;
+                        }
+                    }
                 }
             }
         }
-
-        
     }
 
-    @media screen and (min-width: 1200px) {
-        padding-top: 128px;
-        padding-bottom: 128px;
-        
+    @media screen and (min-width: 768px) {
+        padding-top: 111px;
+        padding-bottom: 103px;
+
         .wrapper {
-            
+
+            .title {
+                font-size: 42px;
+                align-items: flex-start;
+                margin-bottom: 20px;
+            }
 
             .about__content {
                 display: flex;
-                flex-direction: row;
                 align-items: center;
-                justify-content: center;
-                gap: 80px;                
-                text-align: left;
+                justify-content: space-between;
+                gap: 70px;
 
-                .subtitle {
-                   font-size: 42px; 
+                .cover__detail {
+                    display: block;
+                    position: absolute;
+                    right: -42px;
+                    top: -20px;
+                    width: fit-content;
                 }
 
-                .text {
-                    font-size: 18px;
-                    line-height: 148%;
-                    margin-bottom: 0;
+                .content {
+                    max-width: 571px;
+
+                    .about__text {
+                        font-size: 18px;
+                        line-height: 160%;
+                        text-align: justify;
+                    }
+
+                    .about__numbers {
+                        flex-direction: row;
+                        justify-content: center;
+                        gap: 60px;
+                        margin-bottom: 0;
+                        margin-top: 0;
+                    }
                 }
             }
-
-            
         }
-
-        
     }
 }
