--- a/assets/css/less/page/banner.less
+++ b/assets/css/less/page/banner.less
@@ -3,8 +3,9 @@
 .page__banner {
     background-image: url('../img/banner-mobile.png');
     background-repeat: no-repeat;
-    padding-top: 163px;
-    padding-bottom: 268px;
+    padding-top: 195px;
+    padding-bottom: 60px;
+    background-size: 100%;
 
     .wrapper {
         max-width: 1024px;
@@ -14,7 +15,7 @@
         margin-right: auto;
 
         .title {
-            font-size: 42px;
+            font-size: 36px;
             text-transform: uppercase;
             font-weight: 700;
             margin-bottom: 8px;
@@ -29,7 +30,7 @@
         }
 
         .description {
-            font-size: 22px;
+            font-size: 18px;
             font-weight: 400;
             max-width: 619px;
             margin-bottom: 28px;
@@ -51,7 +52,7 @@
             
             .down {
                 .chevron__down {
-                    width: fit-content;
+                    width: 35px;
                 }
             }
         }
@@ -70,7 +71,8 @@
                 width: 650px;
             }
             .description {               
-               width: 619px; 
+               width: 619px;
+               font-size: 22px; 
             }
         }
     }
