--- a/assets/css/less/util/_carousel-utils.less
+++ b/assets/css/less/util/_carousel-utils.less
@@ -3,9 +3,8 @@
 // * CAROUSEL UTILS
 // ? Objetivo: mixins para customizar o carrossel do Owl Carousel e manter consistência no projeto.
 
- .owl-dots-green(){
+ .owl-dots-square(){
     .owl-dots {
-        margin-top: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -21,11 +20,12 @@
                 width: 8px;
                 height: 8px;
                 background-color: #8c918d;
+                border-radius: 1px;
             }
 
             &.active {
                 span {
-                    background-color: #5DA042;
+                    background-color: #0075E1;
                 }
             }
         }
@@ -36,36 +36,4 @@
     }
 }
 
-.owl-dots-square-white() {
-    .owl-dots {
-        margin-top: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
 
-        .owl-dot {
-            height: 8px !important;
-            display: flex;
-            align-items: center;
-
-            span {
-                margin: 0;
-                width: 8px;
-                height: 8px;
-                background-color: rgba(255, 255, 255, 0.26);
-                border-radius: 0;
-            }
-
-            &.active {
-                span {
-                    background-color: #FFF;
-                }
-            }
-        }
-
-        &.disabled {
-            display: none;
-        }
-    }
-}
