--- a/assets/css/less/components/buttons.less
+++ b/assets/css/less/components/buttons.less
@@ -17,9 +17,17 @@
     width: fit-content;
     line-height: 102.1%;
 
+    .icon__whats {
+        width: fit-content;
+    }
+
     &:hover {
         color: #0184FE;
         background-color: #F0F8FF;
+
+        .icon__whats {
+            filter: brightness(0) saturate(100%) invert(32%) sepia(85%) saturate(3283%) hue-rotate(197deg) brightness(107%) contrast(99%);
+        }
     }
 }
 
