--- a/assets/css/less/page/cta.less
+++ b/assets/css/less/page/cta.less
@@ -1,22 +1,21 @@
 //out: false
 
 .page__cta {
-    background-image: url('../img/bg-cta.png'), linear-gradient(130deg, #68A84E 34%, #7DC95E 100%);
+    background-image: url('../img/bg-cta.png'), linear-gradient(130deg, #031120 34%, #0A447F 100%);
     background-repeat: no-repeat;
-    background-position: bottom 0 right 0;
-    background-size: 150px, 100%;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    margin-top: 40px;
+    background-position: bottom 0 right -20px, top 0 left 0;
+    background-size: 180px, 100%;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
     .wrapper {
-        max-width: 1224px;
+        max-width: 1108px;
         padding-left: 24px;
         padding-right: 24px;
         margin-left: auto;
         margin-right: auto;
 
-        .title {
+        .cta__title {
             text-align: center;
             color: #FFF;
             font-size: 36px;
@@ -24,28 +23,40 @@
             line-height: 110%;
             margin-bottom: 30px;
         }
+
+        .btn__blue.btn__cta {
+            font-size: 18px;
+            gap: 10px;
+            padding: 18px 30px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     @media screen and (min-width: 1200px) {
-        background-size: 270px, 100%;
+        background-size: 300px, 100%;
+        background-position: bottom 0 right 0;
         padding-top: 68px;
-        padding-bottom: 55px;
+        padding-bottom: 68px;
 
         .wrapper {
             display: flex;
             align-items: center;
             justify-content: space-between;
 
-            .title {
+            .cta__title {
                font-size: 42px;
-               line-height: 128%;
-               width: 652px;
+               line-height: 147%;
+               width: 585px;
                text-align: left;
                margin-bottom: 0; 
             }
 
-            .btn__cta {
+            .btn__blue.btn__cta {
                 max-width: 365px;
+                padding: 18px 32px;
+                font-size: 22px;
+                margin-right: 0;
             }
         }
     }
