--- a/assets/css/less/page/footer.less
+++ b/assets/css/less/page/footer.less
@@ -1,36 +1,33 @@
 //out: false
 
-.page__footer {    
+.page__footer {
+    margin-top: -1px;
 
     .footer__content {
         background-image: url('../img/bg-footer.png');
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: center;
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 75px;
+        padding-bottom: 75px;
 
         .wrapper {
-            max-width: 1241px;
+            max-width: 1090px;
             margin-left: auto;
             margin-right: auto;
             padding-left: 24px;
             padding-right: 24px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
 
             .footer__links {
                 display: flex;
-                flex-direction: column;
                 align-items: center;
-                gap: 30px;
+                flex-direction: column;
+                gap: 25px;
                 margin-bottom: 60px;
 
-                .logo__footer {
-                    width: 280px;
+                .link__logo {
+                    width: 200px;
 
-                    .logo {
+                    .logo__footer {
                         width: 100%;
                     }
                 }
@@ -38,12 +35,14 @@
                 .links__social {
                     display: flex;
                     align-items: center;
-                    gap: 30px;
+                    gap: 20px;
 
-                    .social {
+                    .link {
+                        transition: all linear .15s;
+
                         &:hover {
                             img {
-                                filter: brightness(0) saturate(100%) invert(73%) sepia(39%) saturate(584%) hue-rotate(57deg) brightness(94%) contrast(82%);
+                                filter: brightness(0) saturate(100%) invert(32%) sepia(85%) saturate(3283%) hue-rotate(197deg) brightness(107%) contrast(99%);
                             }
                         }
                     }
@@ -54,154 +53,126 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                text-align: center;
                 gap: 20px;
-                margin-bottom: 60px;
-
-                .nav__title {
-                   font-size: 20px;
-                   font-weight: 400;
-                   letter-spacing: 2.6px;
-                   margin-bottom: 10px; 
-                   color: #7DC95E;
-                   text-transform: uppercase;
-                }
+                margin-bottom: 40px;
 
                 .link__nav {
-                   font-size: 16px;
-                   font-weight: 600;
-                   color: #FFF;
-                   text-transform: uppercase;
-                   transition: all linear .15s;
+                    color: #F0F8FF;
+                    font-size: 16px;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    transition: all linear .15s;
 
-                   &:hover {
-                      color: #7DC95E;
-                   }
+                    &:hover {
+                        color: #0184FE;
+                        cursor: pointer;
+                    }
                 }
             }
 
-            .footer__contact {
+            .footer__contacts {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                gap: 15px;
-                margin-bottom: 15px;
-
-                .contact__title {
-                   font-size: 20px;
-                   font-weight: 400;
-                   letter-spacing: 2.6px;
-                   margin-bottom: 15px; 
-                   color: #7DC95E;
-                   text-transform: uppercase;
-                }
+                gap: 20px;
 
                 .link__contact {
                     display: flex;
                     align-items: center;
-                   font-size: 16px;
-                   font-weight: 400;
-                   color: #FFF;
-                   transition: all linear .15s;
-                   gap: 15px;
+                    gap: 12px;
 
-                   .icon__contact {
-                      width: fit-content;
-                   }
+                    .icon__contact {
+                        width: fit-content;
+                    }
 
-                   &:hover {
-                      color: #7DC95E;
+                    .contact {
+                        color: #F0F8FF;
+                        font-size: 16px;
+                        transition: all linear .15s;
 
-                      .icon__contact {
-                        filter: brightness(0) saturate(100%) invert(73%) sepia(39%) saturate(584%) hue-rotate(57deg) brightness(94%) contrast(82%);
-                      }
-                   }
-                }                
-            }
+                        &:hover {
+                            color: #0184FE;
+                            cursor: pointer;
+                        }
+                    }
+                }
 
-            .contact__info {
-                display: flex;
-                align-items: center;
-                gap: 15px;
-               font-size: 16px;
-               font-weight: 400;
-               color: #FFF;
-
-               .icon__contact {
-                  width: fit-content;
-               }
+                .contact__info {
+                    color: #F0F8FF;
+                    font-size: 16px;
+                    line-height: 149%;
+                    text-align: center;
+                }
             }
         }
     }
 
     .footer__copyrights {
-        padding-top: 30px;
-        padding-bottom: 30px;
+        padding-top: 35px;
+        padding-bottom: 35px;
+        background-color: #EEEDED;
 
         .wrapper {
-            max-width: 1241px;
-            margin-left: auto;
-            margin-right: auto;
-            padding-left: 24px;
-            padding-right: 24px;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 30px;
+            justify-content: center;
+            text-align: center;
 
-            .copyright {
-                font-size: 16px;
-                font-weight: 400;
+            .copyrights {
+                line-height: 145%;
+                color: #020305;
                 text-align: center;
-            }
-
-            .logo__esc {
-                width: 240px;
-
-                .logo {
-                    width: 100%;
-                }
+                padding: 0 30px;
             }
         }
     }
 
-    @media screen and (min-width: 1200px) {
-        .footer__content {
-            padding-top: 110px;
-            padding-bottom: 175px;
+    @media screen and (min-width: 768px) {
+        .footer__content {            
+            padding-top: 148px;
+            padding-bottom: 148px;
 
             .wrapper {
-                flex-direction: row;
-                align-items: flex-start;
-                gap: 80px;
+                display: flex;
+                justify-content: space-between;
 
                 .footer__links {
-                    margin-bottom: 0;
+                    order: 2;
+
+                    .link__logo {
+                        width: 280px;
+                    }
                 }
 
                 .footer__nav {
+                    order: 1;
                     align-items: flex-start;
+                    text-align: left;
                     margin-bottom: 0;
+                    width: 279px;
+                    padding-left: 140px;
                 }
 
-                .footer__contact {
+                .footer__contacts {
                     align-items: flex-start;
-                    margin-bottom: 0;
-                }
+                    width: 279px;
+                    order: 3;
 
-                .contact__info {
-                    margin-top: 50px;
+                    .link__contact {
+                        gap: 20px;
+                    }
+
+                    .contact__info {
+                        padding-left: 41px;
+                        text-align: left;
+                    }
                 }
             }
         }
 
         .footer__copyrights {
-            padding-top: 24px;
-            padding-bottom: 24px;
-
-            .wrapper {
-                flex-direction: row;
-                justify-content: space-between;
-            }
+            padding-top: 45px;
+            padding-bottom: 45px;
         }
     }
 }
