--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,9 +220,15 @@ nav {
   width: fit-content;
   line-height: 102.1%;
 }
+.btn__blue .icon__whats {
+  width: fit-content;
+}
 .btn__blue:hover {
   color: #0184FE;
   background-color: #F0F8FF;
+}
+.btn__blue:hover .icon__whats {
+  filter: brightness(0) saturate(100%) invert(32%) sepia(85%) saturate(3283%) hue-rotate(197deg) brightness(107%) contrast(99%);
 }
 @keyframes effect--fade_in_right {
   0% {
@@ -896,23 +902,126 @@ nav {
     font-size: 20px;
   }
 }
+.page__customers {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #E0F1FF;
+}
+.page__customers .wrapper .title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  color: #020307;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+.page__customers .wrapper .subtitle {
+  font-size: 16px;
+  font-weight: 400;
+  color: #020307;
+  line-height: 26px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-bottom: 35px;
+  text-align: center;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-dots .owl-dot {
+  height: 8px !important;
+  display: flex;
+  align-items: center;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-dots .owl-dot span {
+  margin: 0;
+  width: 8px;
+  height: 8px;
+  background-color: #8c918d;
+  border-radius: 1px;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-dots .owl-dot.active span {
+  background-color: #0075E1;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-dots.disabled {
+  display: none;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-nav {
+  display: none;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .card__customer {
+  width: 250px;
+  height: 149px;
+  border-radius: 10px;
+  background-color: #FFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+.page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .card__customer .customer__cover {
+  width: 200px;
+}
+@media screen and (min-width: 768px) {
+  .page__customers {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .page__customers .wrapper {
+    max-width: 1160px;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .page__customers .wrapper .title {
+    font-size: 42px;
+  }
+  .page__customers .wrapper .subtitle {
+    font-size: 22px;
+    width: 509px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 45px;
+  }
+  .page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-dots {
+    display: none;
+  }
+  .page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .owl-nav {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    width: 110%;
+    top: calc(50% - 40px);
+    left: -52px;
+  }
+}
 .page__cta {
-  background-image: url('../img/bg-cta.png'), linear-gradient(130deg, #68A84E 34%, #7DC95E 100%);
+  background-image: url('../img/bg-cta.png'), linear-gradient(130deg, #031120 34%, #0A447F 100%);
   background-repeat: no-repeat;
-  background-position: bottom 0 right 0;
-  background-size: 150px, 100%;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  margin-top: 40px;
+  background-position: bottom 0 right -20px, top 0 left 0;
+  background-size: 180px, 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .page__cta .wrapper {
-  max-width: 1224px;
+  max-width: 1108px;
   padding-left: 24px;
   padding-right: 24px;
   margin-left: auto;
   margin-right: auto;
 }
-.page__cta .wrapper .title {
+.page__cta .wrapper .cta__title {
   text-align: center;
   color: #FFF;
   font-size: 36px;
@@ -920,193 +1029,182 @@ nav {
   line-height: 110%;
   margin-bottom: 30px;
 }
+.page__cta .wrapper .btn__blue.btn__cta {
+  font-size: 18px;
+  gap: 10px;
+  padding: 18px 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
 @media screen and (min-width: 1200px) {
   .page__cta {
-    background-size: 270px, 100%;
+    background-size: 300px, 100%;
+    background-position: bottom 0 right 0;
     padding-top: 68px;
-    padding-bottom: 55px;
+    padding-bottom: 68px;
   }
   .page__cta .wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  .page__cta .wrapper .title {
+  .page__cta .wrapper .cta__title {
     font-size: 42px;
-    line-height: 128%;
-    width: 652px;
+    line-height: 147%;
+    width: 585px;
     text-align: left;
     margin-bottom: 0;
   }
-  .page__cta .wrapper .btn__cta {
+  .page__cta .wrapper .btn__blue.btn__cta {
     max-width: 365px;
+    padding: 18px 32px;
+    font-size: 22px;
+    margin-right: 0;
   }
+}
+.page__footer {
+  margin-top: -1px;
 }
 .page__footer .footer__content {
   background-image: url('../img/bg-footer.png');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 75px;
+  padding-bottom: 75px;
 }
 .page__footer .footer__content .wrapper {
-  max-width: 1241px;
+  max-width: 1090px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 24px;
   padding-right: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 .page__footer .footer__content .wrapper .footer__links {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 30px;
+  flex-direction: column;
+  gap: 25px;
   margin-bottom: 60px;
 }
-.page__footer .footer__content .wrapper .footer__links .logo__footer {
-  width: 280px;
+.page__footer .footer__content .wrapper .footer__links .link__logo {
+  width: 200px;
 }
-.page__footer .footer__content .wrapper .footer__links .logo__footer .logo {
+.page__footer .footer__content .wrapper .footer__links .link__logo .logo__footer {
   width: 100%;
 }
 .page__footer .footer__content .wrapper .footer__links .links__social {
   display: flex;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
 }
-.page__footer .footer__content .wrapper .footer__links .links__social .social:hover img {
-  filter: brightness(0) saturate(100%) invert(73%) sepia(39%) saturate(584%) hue-rotate(57deg) brightness(94%) contrast(82%);
+.page__footer .footer__content .wrapper .footer__links .links__social .link {
+  transition: all linear 0.15s;
+}
+.page__footer .footer__content .wrapper .footer__links .links__social .link:hover img {
+  filter: brightness(0) saturate(100%) invert(32%) sepia(85%) saturate(3283%) hue-rotate(197deg) brightness(107%) contrast(99%);
 }
 .page__footer .footer__content .wrapper .footer__nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   gap: 20px;
-  margin-bottom: 60px;
-}
-.page__footer .footer__content .wrapper .footer__nav .nav__title {
-  font-size: 20px;
-  font-weight: 400;
-  letter-spacing: 2.6px;
-  margin-bottom: 10px;
-  color: #7DC95E;
-  text-transform: uppercase;
+  margin-bottom: 40px;
 }
 .page__footer .footer__content .wrapper .footer__nav .link__nav {
+  color: #F0F8FF;
   font-size: 16px;
-  font-weight: 600;
-  color: #FFF;
+  font-weight: 700;
   text-transform: uppercase;
   transition: all linear 0.15s;
 }
 .page__footer .footer__content .wrapper .footer__nav .link__nav:hover {
-  color: #7DC95E;
+  color: #0184FE;
+  cursor: pointer;
 }
-.page__footer .footer__content .wrapper .footer__contact {
+.page__footer .footer__content .wrapper .footer__contacts {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
-  margin-bottom: 15px;
+  gap: 20px;
 }
-.page__footer .footer__content .wrapper .footer__contact .contact__title {
-  font-size: 20px;
-  font-weight: 400;
-  letter-spacing: 2.6px;
-  margin-bottom: 15px;
-  color: #7DC95E;
-  text-transform: uppercase;
-}
-.page__footer .footer__content .wrapper .footer__contact .link__contact {
+.page__footer .footer__content .wrapper .footer__contacts .link__contact {
   display: flex;
   align-items: center;
+  gap: 12px;
+}
+.page__footer .footer__content .wrapper .footer__contacts .link__contact .icon__contact {
+  width: fit-content;
+}
+.page__footer .footer__content .wrapper .footer__contacts .link__contact .contact {
+  color: #F0F8FF;
   font-size: 16px;
-  font-weight: 400;
-  color: #FFF;
   transition: all linear 0.15s;
-  gap: 15px;
 }
-.page__footer .footer__content .wrapper .footer__contact .link__contact .icon__contact {
-  width: fit-content;
+.page__footer .footer__content .wrapper .footer__contacts .link__contact .contact:hover {
+  color: #0184FE;
+  cursor: pointer;
 }
-.page__footer .footer__content .wrapper .footer__contact .link__contact:hover {
-  color: #7DC95E;
-}
-.page__footer .footer__content .wrapper .footer__contact .link__contact:hover .icon__contact {
-  filter: brightness(0) saturate(100%) invert(73%) sepia(39%) saturate(584%) hue-rotate(57deg) brightness(94%) contrast(82%);
-}
-.page__footer .footer__content .wrapper .contact__info {
-  display: flex;
-  align-items: center;
-  gap: 15px;
+.page__footer .footer__content .wrapper .footer__contacts .contact__info {
+  color: #F0F8FF;
   font-size: 16px;
-  font-weight: 400;
-  color: #FFF;
-}
-.page__footer .footer__content .wrapper .contact__info .icon__contact {
-  width: fit-content;
-}
-.page__footer .footer__copyrights {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.page__footer .footer__copyrights .wrapper {
-  max-width: 1241px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 24px;
-  padding-right: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-}
-.page__footer .footer__copyrights .wrapper .copyright {
-  font-size: 16px;
-  font-weight: 400;
+  line-height: 149%;
   text-align: center;
 }
-.page__footer .footer__copyrights .wrapper .logo__esc {
-  width: 240px;
+.page__footer .footer__copyrights {
+  padding-top: 35px;
+  padding-bottom: 35px;
+  background-color: #EEEDED;
 }
-.page__footer .footer__copyrights .wrapper .logo__esc .logo {
-  width: 100%;
+.page__footer .footer__copyrights .wrapper {
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
-@media screen and (min-width: 1200px) {
+.page__footer .footer__copyrights .wrapper .copyrights {
+  line-height: 145%;
+  color: #020305;
+  text-align: center;
+  padding: 0 30px;
+}
+@media screen and (min-width: 768px) {
   .page__footer .footer__content {
-    padding-top: 110px;
-    padding-bottom: 175px;
+    padding-top: 148px;
+    padding-bottom: 148px;
   }
   .page__footer .footer__content .wrapper {
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 80px;
+    display: flex;
+    justify-content: space-between;
   }
   .page__footer .footer__content .wrapper .footer__links {
-    margin-bottom: 0;
+    order: 2;
+  }
+  .page__footer .footer__content .wrapper .footer__links .link__logo {
+    width: 280px;
   }
   .page__footer .footer__content .wrapper .footer__nav {
+    order: 1;
     align-items: flex-start;
+    text-align: left;
     margin-bottom: 0;
+    width: 279px;
+    padding-left: 140px;
   }
-  .page__footer .footer__content .wrapper .footer__contact {
+  .page__footer .footer__content .wrapper .footer__contacts {
     align-items: flex-start;
-    margin-bottom: 0;
+    width: 279px;
+    order: 3;
   }
-  .page__footer .footer__content .wrapper .contact__info {
-    margin-top: 50px;
+  .page__footer .footer__content .wrapper .footer__contacts .link__contact {
+    gap: 20px;
+  }
+  .page__footer .footer__content .wrapper .footer__contacts .contact__info {
+    padding-left: 41px;
+    text-align: left;
   }
   .page__footer .footer__copyrights {
-    padding-top: 24px;
-    padding-bottom: 24px;
-  }
-  .page__footer .footer__copyrights .wrapper {
-    flex-direction: row;
-    justify-content: space-between;
+    padding-top: 45px;
+    padding-bottom: 45px;
   }
 }
 body {
