--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -18,7 +18,8 @@
 @import 'less/page/banner.less';                                                    
 @import 'less/page/about.less'; 
 @import 'less/page/services.less'; 
-@import 'less/page/testimonials.less';                                                            
+@import 'less/page/testimonials.less'; 
+@import 'less/page/customers.less';                                                                                                            
 @import 'less/page/cta.less';                                                                                                                                          
 @import 'less/page/footer.less';   
 @import 'less/page/theme.less';              
