--- a/assets/css/less/page/testimonials.less
+++ b/assets/css/less/page/testimonials.less
@@ -60,6 +60,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+                gap: 20px;
                 margin-top: 25px;
                 margin-bottom: 25px;
                 background-color: #FFF;
@@ -86,6 +87,7 @@
                     font-size: 18px;
                     font-weight: 700;                  
                     color: #020307;
+                    line-height: 25px;
                 }
             }
         }
@@ -147,7 +149,7 @@
                         justify-content: center;
 
                         img {
-                            width: fit-content;
+                            width: 25px;
                         }
                     }
 
@@ -166,7 +168,7 @@
 
                 .card__testimonial {
                     width: 400px;
-                    height: 330px;
+                    height: 360px;
                     padding: 60px 36px 36px 36px;
                     margin-top: 40px;
 
@@ -177,7 +179,7 @@
                     }
 
                     .testimonial {
-                       font-size: 16px;
+                       font-size: 14px;
                        line-height: 147%;
                     }
 
