--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -723,6 +723,104 @@ nav {
     box-shadow: 10px 10px 0px #020307;
   }
 }
+.modal.modal__service .modal-dialog {
+  max-width: 990px;
+}
+.modal.modal__service .modal-dialog .modal-content {
+  border: none;
+  border-radius: 20px;
+  background-image: url('../img/bg-modal-1.png');
+  background-position: bottom 70px right 0;
+  background-repeat: no-repeat;
+  min-height: 560px;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-header {
+  padding: 40px;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  border-bottom: none;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-header .heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-header .heading .icon__service {
+  height: 50px;
+  margin-bottom: 16px;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-header .heading .modal-title {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 700;
+  color: #0075E1;
+  margin-bottom: 4px;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-header .heading .subtitle {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25px;
+  color: #020307;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-header .close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-body {
+  padding: 0 80px 100px 80px;
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  position: relative;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-body .modal__content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 50%;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-body .modal__content .list__title {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 25px;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-body .modal__content ul {
+  margin-left: 30px;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-body .modal__content ul li {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
+  list-style-type: square;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-body .btn__modal {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  width: 100%;
+  background-color: #25d366;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 22px;
+  font-weight: 700;
+  color: #FFF;
+  text-transform: uppercase;
+  line-height: 102%;
+  padding: 25px;
+  transition: all linear 0.15s;
+}
+.modal.modal__service .modal-dialog .modal-content .modal-body .btn__modal:hover {
+  background-color: #0075E1;
+  color: #FFF;
+}
 .page__testimonials {
   position: relative;
   padding-top: 40px;
@@ -797,6 +895,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 20px;
   margin-top: 25px;
   margin-bottom: 25px;
   background-color: #FFF;
@@ -821,6 +920,7 @@ nav {
   font-size: 18px;
   font-weight: 700;
   color: #020307;
+  line-height: 25px;
 }
 @media screen and (min-width: 768px) {
   .page__testimonials {
@@ -875,7 +975,7 @@ nav {
   }
   .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev img,
   .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-next img {
-    width: fit-content;
+    width: 25px;
   }
   .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev img {
     margin-right: 5px;
@@ -885,7 +985,7 @@ nav {
   }
   .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial {
     width: 400px;
-    height: 330px;
+    height: 360px;
     padding: 60px 36px 36px 36px;
     margin-top: 40px;
   }
@@ -895,7 +995,7 @@ nav {
     left: 36px;
   }
   .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .testimonial {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 147%;
   }
   .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .name {
