--- a/assets/css/less/page/customers.less
+++ b/assets/css/less/page/customers.less
@@ -51,7 +51,7 @@
                 margin-bottom: 40px;
 
                 .customer__cover {
-                    width: 200px;
+                    width: fit-content;
                 }
             }
         }
