--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -507,7 +507,6 @@ nav {
   }
   .page__about .wrapper .about__content {
     display: flex;
-    align-items: center;
     justify-content: space-between;
     gap: 70px;
   }
@@ -862,34 +861,34 @@ nav {
   line-height: 26px;
   margin-bottom: 35px;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-dots {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-dots {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 8px;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-dots .owl-dot {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-dots .owl-dot {
   height: 8px !important;
   display: flex;
   align-items: center;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-dots .owl-dot span {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-dots .owl-dot span {
   margin: 0;
   width: 8px;
   height: 8px;
   background-color: #8c918d;
   border-radius: 1px;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-dots .owl-dot.active span {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-dots .owl-dot.active span {
   background-color: #0075E1;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-dots.disabled {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-dots.disabled {
   display: none;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav {
   display: none;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .card__testimonial {
   position: relative;
   padding: 50px 30px 30px 30px;
   display: flex;
@@ -904,19 +903,19 @@ nav {
   min-height: 280px;
   box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.3);
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .icon__quotes {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .icon__quotes {
   width: 50px;
   position: absolute;
   top: -25px;
   left: 30px;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .testimonial {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .testimonial {
   font-size: 14px;
   font-weight: 400;
   line-height: 134%;
   color: #020307;
 }
-.page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .name {
+.page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .name {
   font-size: 18px;
   font-weight: 700;
   color: #020307;
@@ -924,7 +923,7 @@ nav {
 }
 @media screen and (min-width: 768px) {
   .page__testimonials {
-    padding-bottom: 154px;
+    padding-bottom: 100px;
   }
   .page__testimonials .bg__testimonials {
     width: 96%;
@@ -950,21 +949,24 @@ nav {
     font-size: 22px;
     margin-bottom: 0;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel {
+  .page__testimonials .wrapper .carousel {
+    max-width: 820px;
+  }
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel {
     width: 100%;
     position: relative;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-dots {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-dots {
     display: none;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav {
     display: flex;
     position: absolute;
     top: -30px;
     right: 30px;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev,
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-next {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev,
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-next {
     width: 35px;
     height: 35px;
     border-radius: 100%;
@@ -973,33 +975,25 @@ nav {
     align-items: center;
     justify-content: center;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev img,
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-next img {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev img,
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-next img {
     width: 25px;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev img {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-prev img {
     margin-right: 5px;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-next img {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .owl-nav .owl-next img {
     margin-left: 5px;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .card__testimonial {
     width: 400px;
-    height: 360px;
     padding: 60px 36px 36px 36px;
     margin-top: 40px;
   }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .icon__quotes {
+  .page__testimonials .wrapper .carousel .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .icon__quotes {
     width: 60px;
     top: -30px;
     left: 36px;
-  }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .testimonial {
-    font-size: 14px;
-    line-height: 147%;
-  }
-  .page__testimonials .wrapper .owl-carousel.owl-theme.testimonials__carousel .card__testimonial .name {
-    font-size: 20px;
   }
 }
 .page__customers {
@@ -1068,7 +1062,7 @@ nav {
   margin-bottom: 40px;
 }
 .page__customers .wrapper .owl-carousel.owl-theme.customers__carousel .card__customer .customer__cover {
-  width: 200px;
+  width: fit-content;
 }
 @media screen and (min-width: 768px) {
   .page__customers {
