--- a/assets/css/less/page/testimonials.less
+++ b/assets/css/less/page/testimonials.less
@@ -46,55 +46,58 @@
 
         }
 
-        .owl-carousel.owl-theme.testimonials__carousel {
+        .carousel {
 
-            .owl-dots-square();
+            .owl-carousel.owl-theme.testimonials__carousel {
 
-            .owl-nav {
-                display: none;
-            }
+                .owl-dots-square();
 
-            .card__testimonial {
-                position: relative;
-                padding: 50px 30px 30px 30px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                gap: 20px;
-                margin-top: 25px;
-                margin-bottom: 25px;
-                background-color: #FFF;
-                border: 1px solid #C7C8CA;
-                border-radius: 5px;
-                min-height: 280px;
-                box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.3);
-
-                .icon__quotes {
-                    width: 50px;
-                    position: absolute;
-                    top: -25px;
-                    left: 30px;
+                .owl-nav {
+                    display: none;
                 }
 
-                .testimonial {
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 134%;
-                    color: #020307;
-                }
+                .card__testimonial {
+                    position: relative;
+                    padding: 50px 30px 30px 30px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    gap: 20px;
+                    margin-top: 25px;
+                    margin-bottom: 25px;
+                    background-color: #FFF;
+                    border: 1px solid #C7C8CA;
+                    border-radius: 5px;
+                    min-height: 280px;
+                    box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.3);
 
-                .name {  
-                    font-size: 18px;
-                    font-weight: 700;                  
-                    color: #020307;
-                    line-height: 25px;
+                    .icon__quotes {
+                        width: 50px;
+                        position: absolute;
+                        top: -25px;
+                        left: 30px;
+                    }
+
+                    .testimonial {
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: 134%;
+                        color: #020307;
+                    }
+
+                    .name {  
+                        font-size: 18px;
+                        font-weight: 700;                  
+                        color: #020307;
+                        line-height: 25px;
+                    }
                 }
             }
         }
     }
 
     @media screen and (min-width: 768px) {
-        padding-bottom: 154px;
+        padding-bottom: 100px;
 
         .bg__testimonials {
             width: 96%;
@@ -124,67 +127,61 @@
                 }
             }
 
-            .owl-carousel.owl-theme.testimonials__carousel {
-                width: 100%;
-                position: relative;
+            .carousel {
+                max-width: 820px;
 
-                .owl-dots {
-                    display: none;
-                }
+                .owl-carousel.owl-theme.testimonials__carousel {
+                    width: 100%;
+                    position: relative;
 
-                .owl-nav {
-                    display: flex;
-                    position: absolute;
-                    top: -30px;
-                    right: 30px;
+                    .owl-dots {
+                        display: none;
+                    }
 
-                    .owl-prev,
-                    .owl-next {
-                        width: 35px;
-                        height: 35px;
-                        border-radius: 100%;
-                        background-color: #FFF;
+                    .owl-nav {
                         display: flex;
-                        align-items: center;
-                        justify-content: center;
-
-                        img {
-                            width: 25px;
-                        }
-                    }
-
-                    .owl-prev {
-                        img {
-                            margin-right: 5px;
-                        }
-                    }
-
-                    .owl-next {
-                        img {
-                            margin-left: 5px;
-                        }
-                    }
-                }
-
-                .card__testimonial {
-                    width: 400px;
-                    height: 360px;
-                    padding: 60px 36px 36px 36px;
-                    margin-top: 40px;
-
-                    .icon__quotes {
-                        width: 60px;
+                        position: absolute;
                         top: -30px;
-                        left: 36px;
+                        right: 30px;
+
+                        .owl-prev,
+                        .owl-next {
+                            width: 35px;
+                            height: 35px;
+                            border-radius: 100%;
+                            background-color: #FFF;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+
+                            img {
+                                width: 25px;
+                            }
+                        }
+
+                        .owl-prev {
+                            img {
+                                margin-right: 5px;
+                            }
+                        }
+
+                        .owl-next {
+                            img {
+                                margin-left: 5px;
+                            }
+                        }
                     }
 
-                    .testimonial {
-                       font-size: 14px;
-                       line-height: 147%;
-                    }
+                    .card__testimonial {
+                        width: 400px;
+                        padding: 60px 36px 36px 36px;
+                        margin-top: 40px;
 
-                    .name {
-                        font-size: 20px;
+                        .icon__quotes {
+                            width: 60px;
+                            top: -30px;
+                            left: 36px;
+                        }
                     }
                 }
             }
