--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -5,7 +5,8 @@
 
 // * COMPONENTS
 
-@import 'less/components/buttons.less';                                                                          
+@import 'less/components/buttons.less';
+@import 'less/components/whatsapp.less';                                                                                
 
 // * UTIL
 
