--- a/assets/css/less/page/modal.less
+++ b/assets/css/less/page/modal.less
@@ -10,8 +10,7 @@
             border-radius: 20px;
             background-image: url('../img/bg-modal-1.png');
             background-position: bottom 70px right 0;
-            background-repeat: no-repeat;
-            min-height: 560px;
+            background-repeat: no-repeat;            
 
             .modal-header {
                 padding: 40px;
@@ -56,8 +55,9 @@
             }
 
             .modal-body {
-                padding: 0 80px 100px 80px;
+                padding: 0 30px 100px 30px;
                 display: flex;
+                flex-direction: column;
                 gap: 30px;
                 justify-content: center;
                 position: relative;
@@ -65,8 +65,7 @@
                 .modal__content {
                     display: flex;
                     flex-direction: column;
-                    gap: 12px;
-                    width: 50%;
+                    gap: 12px;                    
 
                     .list__title {
                     font-size: 16px;
@@ -117,6 +116,19 @@
 
     @media screen and (min-width: 768px) {
 
-        
+        .modal-dialog {
+            .modal-content {
+                min-height: 560px;
+
+                .modal-body {
+                    flex-direction: row;
+                    padding: 0 80px 100px 80px;
+                    
+                    .modal__content {
+                        width: 50%;
+                    }
+                }
+            }
+        }
     }
 }
