--- a/assets/css/less/page/theme.less
+++ b/assets/css/less/page/theme.less
@@ -1,7 +1,7 @@
 //out: false
 
 body {
-    background-color: #FBFBFB;
-    font-family: "Saira", sans serif;
-    color: #020307;
+    background-color: #F5F5F5;
+    font-family: "Roboto", sans serif;
+    color: #131312;
 }
