--- a/assets/css/less/global/fonts.less
+++ b/assets/css/less/global/fonts.less
@@ -1,3 +1,3 @@
 //out: false 
 
-@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
